--- a/DataSet_Correction.ipynb
+++ b/DataSet_Correction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,9 +34,9 @@
     "#Adding Column Name\n",
     "column_name = [\"Flight No\", \"TimeStamp\", \"Altitude\", \"Latitude\", \"longitude\"]\n",
     "#Reading CSV file\n",
-    "df = pd.read_csv(\"D:/This PC/Desktop/Vit classes/3rd Years/SEM 1/Routing-Optimisation-for-aeronautical-Networks/NA_11_Jun_29_2018_UTC11.CSV\", sep=\" \", names = column_name)\n",
+    "df = pd.read_csv(\"NA_11_Jun_29_2018_UTC11.CSV\", sep=\" \", names = column_name)\n",
     "#Updated CSV file\n",
-    "df.to_csv(\"D:/This PC/Desktop/Vit classes/3rd Years/SEM 1/Routing-Optimisation-for-aeronautical-Networks/NA_11_Jun_29_2018_UTC11_Output.CSV\", index=False)\n",
+    "df.to_csv(\"NA_11_Jun_29_2018_UTC11_Output.CSV\", index=False)\n",
     "print(df.head())\n",
     "\n",
     "\n"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
