--- a/DataSet_Correction.ipynb
+++ b/DataSet_Correction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -37,9 +37,7 @@
     "df = pd.read_csv(\"NA_11_Jun_29_2018_UTC11.CSV\", sep=\" \", names = column_name)\n",
     "#Updated CSV file\n",
     "df.to_csv(\"NA_11_Jun_29_2018_UTC11_Output.CSV\", index=False)\n",
-    "print(df.head())\n",
-    "\n",
-    "\n"
+    "print(df.head())\n"
    ]
   },
   {
@@ -52,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +76,60 @@
     "df = pd.read_csv(\"NA_11_Jun_29_2018_UTC11_Output.CSV\")\n",
     "print(df.head())\n",
     "print(df.tail())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating dataset for transmission link"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\"Mode k\":[1, 2, 3, 4, 5, 6, 7], \n",
+    "        \"Mode Color\":[\"Red\", \"Orange\", \"Yellow\", \"Green\", \"Blue\", \"Pink\", \"Purple\"], \n",
+    "        \"Switching Threshold(km)\":[500, 400, 300, 190, 90, 35, 5.56],\n",
+    "        \"transmission Rate\": [31.895, 43.505, 52.857, 63.970, 77.071, 93.854, 119.130]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_trans = pd.DataFrame(data)\n",
+    "df_trans.to_csv(\"Transmission Link.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Mode k Mode Color  Switching Threshold(km)  transmission Rate\n",
+      "0       1        Red                   500.00             31.895\n",
+      "1       2     Orange                   400.00             43.505\n",
+      "2       3     Yellow                   300.00             52.857\n",
+      "3       4      Green                   190.00             63.970\n",
+      "4       5       Blue                    90.00             77.071\n",
+      "5       6       Pink                    35.00             93.854\n",
+      "6       7     Purple                     5.56            119.130\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_trans)"
    ]
   }
  ],
