--- a/DataSet_Correction.ipynb
+++ b/DataSet_Correction.ipynb
@@ -30,14 +30,13 @@
    "source": [
     "import math\n",
     "import pandas as pd\n",
-    "\n",
     "#Adding Column Name\n",
     "column_name = [\"Flight No\", \"TimeStamp\", \"Altitude\", \"Latitude\", \"longitude\"]\n",
     "#Reading CSV file\n",
     "df = pd.read_csv(\"NA_11_Jun_29_2018_UTC11.CSV\", sep=\" \", names = column_name)\n",
     "#Updated CSV file\n",
     "df.to_csv(\"NA_11_Jun_29_2018_UTC11_Output.CSV\", index=False)\n",
-    "print(df.head())\n"
+    "print(df.head())"
    ]
   },
   {
