--- a/DataSet_Correction.ipynb
+++ b/DataSet_Correction.ipynb
@@ -11,19 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Flight No     TimeStamp  Altitude   Latitude  longitude\n",
-      "0     AA101  1.530270e+09   38975.0  53.936440 -14.502541\n",
-      "1     AA151  1.530270e+09   35975.0  49.129004  -4.044335\n",
-      "2     AA198  1.530270e+09       0.0  39.792819 -72.778591\n",
-      "3     AA204  1.530270e+09       0.0  40.222121 -73.325611\n",
-      "4     AA209  1.530270e+09   37975.0  60.809745 -29.756008\n"
+      "   AA101  1530270000.000000000000  3.89750000e+04  5.39364400e+01  \\\n",
+      "0  AA151             1.530270e+09      35975.0000       49.129004   \n",
+      "1  AA198             1.530270e+09          0.0000       39.792819   \n",
+      "2  AA204             1.530270e+09          0.0000       40.222121   \n",
+      "3  AA209             1.530270e+09      37975.0000       60.809745   \n",
+      "4  AA221             1.530270e+09      32988.0208       59.381674   \n",
+      "\n",
+      "   -1.45025405e+01  \n",
+      "0        -4.044335  \n",
+      "1       -72.778591  \n",
+      "2       -73.325611  \n",
+      "3       -29.756008  \n",
+      "4       -21.598652  \n"
      ]
     }
    ],
@@ -31,9 +38,9 @@
     "import math\n",
     "import pandas as pd\n",
     "#Adding Column Name\n",
-    "column_name = [\"Flight No\", \"TimeStamp\", \"Altitude\", \"Latitude\", \"longitude\"]\n",
+    "# column_name = [\"Flight No\", \"TimeStamp\", \"Altitude\", \"Latitude\", \"longitude\"]\n",
     "#Reading CSV file\n",
-    "df = pd.read_csv(\"NA_11_Jun_29_2018_UTC11.CSV\", sep=\" \", names = column_name)\n",
+    "df = pd.read_csv(\"NA_11_Jun_29_2018_UTC11.CSV\", sep=\" \")#, names = column_name\n",
     "#Updated CSV file\n",
     "df.to_csv(\"NA_11_Jun_29_2018_UTC11_Output.CSV\", index=False)\n",
     "print(df.head())"
@@ -49,25 +56,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Flight No     TimeStamp  Altitude   Latitude  longitude\n",
-      "0     AA101  1.530270e+09   38975.0  53.936440 -14.502541\n",
-      "1     AA151  1.530270e+09   35975.0  49.129004  -4.044335\n",
-      "2     AA198  1.530270e+09       0.0  39.792819 -72.778591\n",
-      "3     AA204  1.530270e+09       0.0  40.222121 -73.325611\n",
-      "4     AA209  1.530270e+09   37975.0  60.809745 -29.756008\n",
-      "    Flight No     TimeStamp    Altitude   Latitude  longitude\n",
-      "144     UA963  1.530270e+09  32000.0000  53.959758 -22.201168\n",
-      "145     UA971  1.530270e+09  34000.0000  53.397706  -2.947119\n",
-      "146     UA973  1.530270e+09  33996.3115  55.451382  -8.613339\n",
-      "147     UA975  1.530270e+09  32000.0000  49.448514  -3.242188\n",
-      "148     UA986  1.530270e+09  33986.1538  52.085831  -4.653686\n"
+      "   AA101  1530270000.000000000000  3.89750000e+04  5.39364400e+01  \\\n",
+      "0  AA151             1.530270e+09      35975.0000       49.129004   \n",
+      "1  AA198             1.530270e+09          0.0000       39.792819   \n",
+      "2  AA204             1.530270e+09          0.0000       40.222121   \n",
+      "3  AA209             1.530270e+09      37975.0000       60.809745   \n",
+      "4  AA221             1.530270e+09      32988.0208       59.381674   \n",
+      "\n",
+      "   -1.45025405e+01  \n",
+      "0        -4.044335  \n",
+      "1       -72.778591  \n",
+      "2       -73.325611  \n",
+      "3       -29.756008  \n",
+      "4       -21.598652  \n",
+      "     AA101  1530270000.000000000000  3.89750000e+04  5.39364400e+01  \\\n",
+      "143  UA963             1.530270e+09      32000.0000       53.959758   \n",
+      "144  UA971             1.530270e+09      34000.0000       53.397706   \n",
+      "145  UA973             1.530270e+09      33996.3115       55.451382   \n",
+      "146  UA975             1.530270e+09      32000.0000       49.448514   \n",
+      "147  UA986             1.530270e+09      33986.1538       52.085831   \n",
+      "\n",
+      "     -1.45025405e+01  \n",
+      "143       -22.201168  \n",
+      "144        -2.947119  \n",
+      "145        -8.613339  \n",
+      "146        -3.242188  \n",
+      "147        -4.653686  \n"
      ]
     }
    ],
@@ -87,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
