--- a/Single_Objective.ipynb
+++ b/Single_Objective.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,18 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "NameError",
+     "evalue": "name 'calculate_distance' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m reader:\n\u001b[0;32m      9\u001b[0m     flight_no \u001b[39m=\u001b[39m row[\u001b[39m0\u001b[39m]\n\u001b[1;32m---> 10\u001b[0m     altitude \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(row[\u001b[39m2\u001b[39;49m])\n\u001b[0;32m     11\u001b[0m     latitude \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(row[\u001b[39m3\u001b[39m])\n\u001b[0;32m     12\u001b[0m     longitude \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(row[\u001b[39m4\u001b[39m])\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 63\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[39mreturn\u001b[39;00m routing_paths\n\u001b[0;32m     62\u001b[0m \u001b[39m# Call the function to find the routing paths with maximum data transmission rate\u001b[39;00m\n\u001b[1;32m---> 63\u001b[0m routing_paths \u001b[39m=\u001b[39m find_max_data_rate_routing_paths(airplanes, ground_stations)\n\u001b[0;32m     65\u001b[0m \u001b[39m# Print the routing paths and their respective data transmission rates\u001b[39;00m\n\u001b[0;32m     66\u001b[0m \u001b[39mfor\u001b[39;00m path \u001b[39min\u001b[39;00m routing_paths:\n",
+      "Cell \u001b[1;32mIn[8], line 49\u001b[0m, in \u001b[0;36mfind_max_data_rate_routing_paths\u001b[1;34m(airplanes, ground_stations)\u001b[0m\n\u001b[0;32m     46\u001b[0m ground_station_id, x_gs, y_gs, z_gs \u001b[39m=\u001b[39m ground_station\n\u001b[0;32m     48\u001b[0m \u001b[39m# Calculate the distance between the airplane and ground station\u001b[39;00m\n\u001b[1;32m---> 49\u001b[0m distance \u001b[39m=\u001b[39m calculate_distance(x_airplane, y_airplane, z_airplane, x_gs, y_gs, z_gs)\n\u001b[0;32m     51\u001b[0m \u001b[39m# Calculate the data transmission rate for the link\u001b[39;00m\n\u001b[0;32m     52\u001b[0m transmission_rate \u001b[39m=\u001b[39m calculate_transmission_rate(distance)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'calculate_distance' is not defined"
      ]
     }
    ],
@@ -73,7 +74,7 @@
     "airplanes = []\n",
     "ground_stations = []\n",
     "\n",
-    "with open('NA_11_Jun_29_2018_UTC11.csv', 'r') as file:\n",
+    "with open('NA_11_Jun_29_2018_UTC11_Output_1.csv', 'r') as file:\n",
     "    reader = csv.reader(file)\n",
     "    next(reader)  # Skip the header row\n",
     "    for row in reader:\n",
@@ -100,7 +101,7 @@
     "        return 52.857\n",
     "    elif 400 < distance <= 450:\n",
     "        return 52.839\n",
-    "    # Add more distance ranges and transmission rates as needed\n",
+    "    \n",
     "    else:\n",
     "        return 0.0  # Default rate if the distance is out of range\n",
     "\n",
