Single Optimization done

--- a/Single_Objective.ipynb
+++ b/Single_Objective.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -37,13 +37,13 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"NA_11_Jun_29_2018_UTC11_Output.CSV\")\n",
+    "data = pd.read_csv(\"NA_11_Jun_29_2018_UTC11.CSV\", sep=\" \")\n",
     "print(data.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,22 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'calculate_distance' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 63\u001b[0m\n\u001b[0;32m     60\u001b[0m     \u001b[39mreturn\u001b[39;00m routing_paths\n\u001b[0;32m     62\u001b[0m \u001b[39m# Call the function to find the routing paths with maximum data transmission rate\u001b[39;00m\n\u001b[1;32m---> 63\u001b[0m routing_paths \u001b[39m=\u001b[39m find_max_data_rate_routing_paths(airplanes, ground_stations)\n\u001b[0;32m     65\u001b[0m \u001b[39m# Print the routing paths and their respective data transmission rates\u001b[39;00m\n\u001b[0;32m     66\u001b[0m \u001b[39mfor\u001b[39;00m path \u001b[39min\u001b[39;00m routing_paths:\n",
-      "Cell \u001b[1;32mIn[8], line 49\u001b[0m, in \u001b[0;36mfind_max_data_rate_routing_paths\u001b[1;34m(airplanes, ground_stations)\u001b[0m\n\u001b[0;32m     46\u001b[0m ground_station_id, x_gs, y_gs, z_gs \u001b[39m=\u001b[39m ground_station\n\u001b[0;32m     48\u001b[0m \u001b[39m# Calculate the distance between the airplane and ground station\u001b[39;00m\n\u001b[1;32m---> 49\u001b[0m distance \u001b[39m=\u001b[39m calculate_distance(x_airplane, y_airplane, z_airplane, x_gs, y_gs, z_gs)\n\u001b[0;32m     51\u001b[0m \u001b[39m# Calculate the data transmission rate for the link\u001b[39;00m\n\u001b[0;32m     52\u001b[0m transmission_rate \u001b[39m=\u001b[39m calculate_transmission_rate(distance)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'calculate_distance' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load and preprocess the dataset\n",
     "airplanes = []\n",
@@ -91,20 +78,35 @@
     "        if flight_no.startswith('AA'):\n",
     "            airplanes.append((flight_no, x, y, z))\n",
     "        else:\n",
-    "            ground_stations.append((flight_no, x, y, z))\n",
-    "\n",
+    "            ground_stations.append((flight_no, x, y, z))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Function to calculate the data transmission rate based on the distance between airplanes\n",
     "def calculate_transmission_rate(distance):\n",
-    "    if 300 < distance <= 350:\n",
+    "    if 300 < distance <= 400:\n",
     "        return 52.875\n",
-    "    elif 350 < distance <= 400:\n",
-    "        return 52.857\n",
+    "    elif 400 < distance <= 500:\n",
+    "        return 31.895\n",
     "    elif 400 < distance <= 450:\n",
     "        return 52.839\n",
-    "    \n",
+    "    elif \n",
     "    else:\n",
     "        return 0.0  # Default rate if the distance is out of range\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Function to find the routing path with maximum end-to-end data transmission rate for each airplane\n",
     "def find_max_data_rate_routing_paths(airplanes, ground_stations):\n",
     "    routing_paths = []\n",
@@ -136,7 +138,7 @@
     "\n",
     "# Print the routing paths and their respective data transmission rates\n",
     "for path in routing_paths:\n",
-    "    print(path)\n"
+    "    print(path)"
    ]
   }
  ],
