--- a/ALLINONE.ipynb
+++ b/ALLINONE.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +117,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Convert_3D(latitude, longitude, altitude):\n",
+    "    earth_radius = 6371  # Radius of the Earth in kilometers\n",
+    "    latitude_rad = math.radians(latitude)\n",
+    "    longitude_rad = math.radians(longitude)\n",
+    "\n",
+    "    x = (earth_radius + altitude) * math.cos(latitude_rad) * math.cos(longitude_rad)\n",
+    "    y = (earth_radius + altitude) * math.cos(latitude_rad) * math.sin(longitude_rad)\n",
+    "    z = (earth_radius + altitude) * math.sin(latitude_rad)\n",
+    "    return x, y, z"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### To find transmission rate"
    ]
   },
@@ -130,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,10 +206,13 @@
     "        longitude = float(row[4])\n",
     "\n",
     "        # Convert latitude, longitude, and altitude to 3D Cartesian coordinates\n",
-    "        x = (math.cos(math.radians(latitude)) * math.cos(math.radians(longitude))) * altitude\n",
-    "        y = (math.cos(math.radians(latitude)) * math.sin(math.radians(longitude))) * altitude\n",
-    "        z = math.sin(math.radians(latitude)) * altitude\n",
-    "\n",
+    "        coordinates = Convert_3D(longitude, latitude, altitude)\n",
+    "        # x = (math.cos(math.radians(latitude)) * math.cos(math.radians(longitude))) * altitude\n",
+    "        # y = (math.cos(math.radians(latitude)) * math.sin(math.radians(longitude))) * altitude\n",
+    "        # z = math.sin(math.radians(latitude)) * altitude\n",
+    "        x = coordinates[0]\n",
+    "        y = coordinates[1]\n",
+    "        z = coordinates[2]\n",
     "        if flight_no.startswith('AA'):\n",
     "            airplanes.append((flight_no, x, y, z))\n",
     "        else:\n",
@@ -193,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -202,8 +230,8 @@
      "text": [
       "{'Airplane': 'AA101', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
       "{'Airplane': 'AA151', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA198', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA204', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA198', 'Routing Path': [('LH421', 93.854)], 'End-to-End Data Rate': 93.854}\n",
+      "{'Airplane': 'AA204', 'Routing Path': [('BA174', 93.854)], 'End-to-End Data Rate': 93.854}\n",
       "{'Airplane': 'AA209', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
       "{'Airplane': 'AA221', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
       "{'Airplane': 'AA25', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
@@ -220,13 +248,13 @@
       "{'Airplane': 'AA717', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
       "{'Airplane': 'AA723', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
       "{'Airplane': 'AA725', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA731', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA731', 'Routing Path': [('BA177', 119.13)], 'End-to-End Data Rate': 119.13}\n",
       "{'Airplane': 'AA749', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
       "{'Airplane': 'AA751', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
       "{'Airplane': 'AA755', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA786', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA786', 'Routing Path': [('DL118', 77.071)], 'End-to-End Data Rate': 77.071}\n",
       "{'Airplane': 'AA787', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA96', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
+      "{'Airplane': 'AA96', 'Routing Path': [('DL407', 119.13)], 'End-to-End Data Rate': 119.13}\n",
       "{'Airplane': 'AA99', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n"
      ]
     }
