--- a/ALLINONE.ipynb
+++ b/ALLINONE.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,13 +100,18 @@
     "    lat2_rad = math.radians(lat2)\n",
     "    lon2_rad = math.radians(lon2)\n",
     "\n",
-    "    x1 = (earth_radius + alt1) * math.cos(lat1_rad) * math.cos(lon1_rad)\n",
-    "    y1 = (earth_radius + alt1) * math.cos(lat1_rad) * math.sin(lon1_rad)\n",
-    "    z1 = (earth_radius + alt1) * math.sin(lat1_rad)\n",
+    "    equatorial_radius = 6378.137  # kilometers\n",
+    "    polar_radius = 6356.752  # kilometers\n",
+    "    eccentricity = math.sqrt(1 - (polar_radius ** 2) / (equatorial_radius ** 2))\n",
     "\n",
-    "    x2 = (earth_radius + alt2) * math.cos(lat2_rad) * math.cos(lon2_rad)\n",
-    "    y2 = (earth_radius + alt2) * math.cos(lat2_rad) * math.sin(lon2_rad)\n",
-    "    z2 = (earth_radius + alt2) * math.sin(lat2_rad)\n",
+    "    x1 = (equatorial_radius + alt1) * math.cos(lat1_rad) * math.cos(lon1_rad)\n",
+    "    y1 = (equatorial_radius + alt1) * math.cos(lat1_rad) * math.sin(lon1_rad)\n",
+    "    z1 = ((equatorial_radius * (1 - eccentricity ** 2)) + alt1) * math.sin(lat1_rad)\n",
+    "\n",
+    "\n",
+    "    x2 = (equatorial_radius + alt2) * math.cos(lat2_rad) * math.cos(lon2_rad)\n",
+    "    y2 = (equatorial_radius + alt2) * math.cos(lat2_rad) * math.sin(lon2_rad)\n",
+    "    z2 = ((equatorial_radius * (1 - eccentricity ** 2)) + alt2) * math.sin(lat2_rad)\n",
     "\n",
     "    distance = math.sqrt((x2 - x1)**2 + (y2 - y1)**2 + (z2 - z1)**2)\n",
     "    return distance"
@@ -122,18 +127,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Convert_3D(latitude, longitude, altitude):\n",
+    "    \n",
     "    earth_radius = 6371  # Radius of the Earth in kilometers\n",
     "    latitude_rad = math.radians(latitude)\n",
     "    longitude_rad = math.radians(longitude)\n",
     "\n",
-    "    x = (earth_radius + altitude) * math.cos(latitude_rad) * math.cos(longitude_rad)\n",
-    "    y = (earth_radius + altitude) * math.cos(latitude_rad) * math.sin(longitude_rad)\n",
-    "    z = (earth_radius + altitude) * math.sin(latitude_rad)\n",
+    "    equatorial_radius = 6378.137  # kilometers\n",
+    "    polar_radius = 6356.752  # kilometers\n",
+    "    eccentricity = math.sqrt(1 - (polar_radius ** 2) / (equatorial_radius ** 2))\n",
+    "\n",
+    "    # Heathrow Airport coordinates to x, y, z coordinates\n",
+    "    x = (equatorial_radius + altitude) * math.cos(latitude_rad) * math.cos(longitude_rad)\n",
+    "    y = (equatorial_radius + altitude) * math.cos(latitude_rad) * math.sin(longitude_rad)\n",
+    "    z = ((equatorial_radius * (1 - eccentricity ** 2)) + altitude) * math.sin(latitude_rad)\n",
+    "    \n",
     "    return x, y, z"
    ]
   },
@@ -155,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,9 +219,6 @@
     "\n",
     "        # Convert latitude, longitude, and altitude to 3D Cartesian coordinates\n",
     "        coordinates = Convert_3D(longitude, latitude, altitude)\n",
-    "        # x = (math.cos(math.radians(latitude)) * math.cos(math.radians(longitude))) * altitude\n",
-    "        # y = (math.cos(math.radians(latitude)) * math.sin(math.radians(longitude))) * altitude\n",
-    "        # z = math.sin(math.radians(latitude)) * altitude\n",
     "        x = coordinates[0]\n",
     "        y = coordinates[1]\n",
     "        z = coordinates[2]\n",
@@ -221,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +239,7 @@
      "text": [
       "{'Airplane': 'AA101', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
       "{'Airplane': 'AA151', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA198', 'Routing Path': [('LH421', 93.854)], 'End-to-End Data Rate': 93.854}\n",
+      "{'Airplane': 'AA198', 'Routing Path': [('LH421', 77.071)], 'End-to-End Data Rate': 77.071}\n",
       "{'Airplane': 'AA204', 'Routing Path': [('BA174', 93.854)], 'End-to-End Data Rate': 93.854}\n",
       "{'Airplane': 'AA209', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
       "{'Airplane': 'AA221', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
@@ -254,7 +263,7 @@
       "{'Airplane': 'AA755', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
       "{'Airplane': 'AA786', 'Routing Path': [('DL118', 77.071)], 'End-to-End Data Rate': 77.071}\n",
       "{'Airplane': 'AA787', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA96', 'Routing Path': [('DL407', 119.13)], 'End-to-End Data Rate': 119.13}\n",
+      "{'Airplane': 'AA96', 'Routing Path': [('DL4', 93.854)], 'End-to-End Data Rate': 93.854}\n",
       "{'Airplane': 'AA99', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n"
      ]
     }
