--- a/routing_optimization.ipynb
+++ b/routing_optimization.ipynb
@@ -56,6 +56,48 @@
     "file_path = \"NA_11_Jun_29_2018_UTC11_Output.CSV\"\n",
     "flights = load_dataset(file_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def convert_to_3d_coordinates(latitude, longitude, altitude=0):\n",
+    "    # Convert latitude and longitude to radians\n",
+    "    latitude_rad = math.radians(latitude)\n",
+    "    longitude_rad = math.radians(longitude)\n",
+    "\n",
+    "    # Define WGS84 ellipsoid parameters\n",
+    "    equatorial_radius = 6378.137  # kilometers\n",
+    "    polar_radius = 6356.752  # kilometers\n",
+    "    eccentricity = math.sqrt(1 - (polar_radius ** 2) / (equatorial_radius ** 2))\n",
+    "\n",
+    "    # Calculate Cartesian coordinates\n",
+    "    x = (equatorial_radius + altitude) * math.cos(latitude_rad) * math.cos(longitude_rad)\n",
+    "    y = (equatorial_radius + altitude) * math.cos(latitude_rad) * math.sin(longitude_rad)\n",
+    "    z = ((equatorial_radius * (1 - eccentricity ** 2)) + altitude) * math.sin(latitude_rad)\n",
+    "\n",
+    "    return x, y, z\n",
+    "\n",
+    "# Heathrow Airport (LHR) coordinates: latitude = 51.4700, longitude = -0.4543, altitude = 25 meters\n",
+    "latitude = 51.4700\n",
+    "longitude = -0.4543\n",
+    "altitude = 25\n",
+    "\n",
+    "# Convert Heathrow Airport coordinates to x, y, z coordinates\n",
+    "x, y, z = convert_to_3d_coordinates(latitude, longitude, altitude)\n",
+    "\n",
+    "print(\"Heathrow Airport (LHR) Coordinates:\")\n",
+    "print(\"Latitude:\", latitude)\n",
+    "print(\"Longitude:\", longitude)\n",
+    "print(\"Altitude:\", altitude)\n",
+    "print(\"x:\", x)\n",
+    "print(\"y:\", y)\n",
+    "print(\"z:\", z)\n"
+   ]
   }
  ],
  "metadata": {
