User Input added

--- a/ALLINONE.ipynb
+++ b/ALLINONE.ipynb
@@ -10,22 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Flight No.     Timestamp  Altitude   Latitude  Longitude\n",
-      "0      AA101  1.530270e+09   38975.0  53.936440 -14.502541\n",
-      "1      AA151  1.530270e+09   35975.0  49.129004  -4.044335\n",
-      "2      AA198  1.530270e+09       0.0  39.792819 -72.778591\n",
-      "3      AA204  1.530270e+09       0.0  40.222121 -73.325611\n",
-      "4      AA209  1.530270e+09   37975.0  60.809745 -29.756008\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -51,24 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   Mode k Mode Color  Switching Threshold(km)  transmission Rate\n",
-      "0       1        Red                   500.00             31.895\n",
-      "1       2     Orange                   400.00             43.505\n",
-      "2       3     Yellow                   300.00             52.857\n",
-      "3       4      Green                   190.00             63.970\n",
-      "4       5       Blue                    90.00             77.071\n",
-      "5       6       Pink                    35.00             93.854\n",
-      "6       7     Purple                     5.56            119.130\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_trans = {\"Mode k\":[1, 2, 3, 4, 5, 6, 7], \n",
     "        \"Mode Color\":[\"Red\", \"Orange\", \"Yellow\", \"Green\", \"Blue\", \"Pink\", \"Purple\"], \n",
@@ -89,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +180,7 @@
     "airplanes = []\n",
     "ground_stations = []\n",
     "\n",
+    "flight_name=input(\"Enter starting string code of flight: \")\n",
     "with open('NA_11_Jun_29_2018_UTC11_Output.csv', 'r') as file:\n",
     "    reader = csv.reader(file)\n",
     "    next(reader)  # Skip the header row\n",
@@ -222,7 +195,8 @@
     "        x = coordinates[0]\n",
     "        y = coordinates[1]\n",
     "        z = coordinates[2]\n",
-    "        if flight_no.startswith('AA'):\n",
+    "\n",
+    "        if flight_no.startswith(flight_name):\n",
     "            airplanes.append((flight_no, x, y, z))\n",
     "        else:\n",
     "            ground_stations.append((flight_no, x, y, z))"
@@ -230,44 +204,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Airplane': 'AA101', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA151', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA198', 'Routing Path': [('LH421', 77.071)], 'End-to-End Data Rate': 77.071}\n",
-      "{'Airplane': 'AA204', 'Routing Path': [('BA174', 93.854)], 'End-to-End Data Rate': 93.854}\n",
-      "{'Airplane': 'AA209', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA221', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA25', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA258', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA291', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA37', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA45', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA47', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA51', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA57', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA67', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA705', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA71', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA717', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA723', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA725', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA731', 'Routing Path': [('BA177', 119.13)], 'End-to-End Data Rate': 119.13}\n",
-      "{'Airplane': 'AA749', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA751', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA755', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA786', 'Routing Path': [('DL118', 77.071)], 'End-to-End Data Rate': 77.071}\n",
-      "{'Airplane': 'AA787', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n",
-      "{'Airplane': 'AA96', 'Routing Path': [('DL4', 93.854)], 'End-to-End Data Rate': 93.854}\n",
-      "{'Airplane': 'AA99', 'Routing Path': [('BA117', 31.895)], 'End-to-End Data Rate': 31.895}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def find_max_data_rate_routing_paths(airplanes, ground_stations):\n",
     "    routing_paths = []\n",
